<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="retry_button">Retry</string>
    <string name="go_to_settings_and_add_new_pair">Go to settings and add new pair</string>
    <string name="usd_eur_tools">USD / EUR</string>
    <string name="_1_01_tools">1.01</string>
    <string name="settings_content_description">settings</string>
    <string name="retry">Retry</string>
    <string name="content_button_save">Save</string>
    <string name="save_button">Save</string>
    <string name="settings_stub_text">NO MORE CURRENCIES</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="remove_pair">Remove this pair from favorite list?</string>
    <string name="confirm">Confirm</string>
    <string name="please_buy_subscription">Buy premium subscription</string>
    <string name="buy">Buy</string>
</resources>