<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000"
        android:contentDescription="@string/go_to_dashboard"
        android:src="@drawable/back_icon_48px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewFrom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_app_margin_16dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toStartOf="@id/dividerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewTo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_app_margin_16dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dividerView"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <com.kliachenko.presentation.core.views.CustomButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_app_margin_16dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/content_button_save"
        android:text="@string/save_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>